# libplcode

./: .gitignore  CLAUDE.md  LICENSE  Makefile  Makefile.am  README.md  configure.ac  configure~  decode_dtmf_wav  plcode.pc.in
.github/workflows/: ci.yml  release.yml
debian/: autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  files  libplcode-dev.install  libplcode0.install  rules
debian/libplcode-dev/DEBIAN/: control  md5sums
debian/libplcode-dev/usr/include/: plcode.h
debian/libplcode-dev/usr/share/doc/libplcode-dev/: copyright
debian/libplcode0/DEBIAN/: control  md5sums  shlibs
debian/libplcode0/usr/lib/aarch64-linux-gnu/: libplcode.so.0  libplcode.so.0.0.0
include/: plcode.h
scripts/: generate-changelog.sh
src/: plcode_courtesy_enc.c  plcode_ctcss_dec.c  plcode_ctcss_enc.c  plcode_cwid_dec.c  plcode_cwid_enc.c  plcode_dcs_dec.c  plcode_dcs_enc.c  plcode_dtmf_dec.c  plcode_dtmf_enc.c  plcode_fskcw_dec.c  plcode_fskcw_enc.c  plcode_golay.c  plcode_internal.h  plcode_mcw_dec.c  plcode_mcw_enc.c  plcode_mdc1200_dec.c  plcode_mdc1200_enc.c  plcode_selcall_dec.c  plcode_selcall_enc.c  plcode_tables.c  plcode_tone_enc.c  plcode_toneburst_dec.c  plcode_toneburst_enc.c  plcode_twotone_dec.c  plcode_twotone_enc.c
tests/: test_courtesy.c  test_ctcss.c  test_cwid.c  test_dcs.c  test_dtmf.c  test_fskcw.c  test_golay.c  test_main.c  test_mcw.c  test_mdc1200.c  test_selcall.c  test_toneburst.c  test_twotone.c
tools/: decode_dtmf_wav.c  decode_dtmf_wav_debug.c  gen_wav.c  validate_wav.py
